fixed background image so it doesn't stretch with tweets and fixed syntax

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -17,26 +17,9 @@ html {
 
 body {
   margin: 0;
-  background-color: #ffdcdc;
-  background-image: url('/images/birds.jpg');
-  background-attachment: scroll;
+  background: url('/images/birds.jpg') no-repeat center center fixed;
   background-size: cover;
   font-family: 'Roboto Condensed', sans-serif;
-}
-
-body::after {
-  content: "";
-  background-image: url('/images/birds.jpg');
-  background-repeat: no-repeat;
-  background-attachment: scroll;
-  background-size: cover;
-  opacity: 0.5;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  position: absolute;
-  z-index: -1;
 }
 
 .container {
@@ -45,6 +28,10 @@ body::after {
   width: 450px;
   background-color: #ffffffbd;
   min-height: 100%;
+}
+
+#tweets-container {
+  height: 100%;
 }
 
 .tweet {
@@ -63,7 +50,7 @@ body::after {
   margin: 0 auto;
   /*top, right, bottom, left */
   padding: 10px 0 60px 0;
-  background-color: #eee;
+  background-color: #e6d8e3;
   width: 100%;
   height: 3em;
   clear: both;
@@ -133,7 +120,7 @@ footer .icons {
 }
 
 .tweet:hover header {
-  background-color: #e0e0e0;
+  background-color: #bdb3bb;
 }
 
 .tweet:hover img {
